tests/ui/proc-macro/issue-59191-replace-root-with-fn.stderr
error: requires `sized` lang_item
  --> $DIR/issue-59191-replace-root-with-fn.rs:9:1
   |
LL | #![issue_59191::no_main]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `issue_59191::no_main` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

